<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.grandwordremember.SettingActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@mipmap/back"
        app:subtitle="@string/menu_title5"
        app:title="@string/toolbar_title"
        app:subtitleTextColor="@android:color/white"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearance_setting"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_color"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/activity_setting_word_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Red"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />
        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_setting"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_num"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/activity_setting_word_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="20"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>
        <View
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <CheckBox
            android:id="@+id/activity_setting_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistic_save"
            android:textSize="20sp"
            android:checked="true"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"/>
        <TextView
            android:id="@+id/activity_setting_save_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="是"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>
        <View
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>
</LinearLayout>
