<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.grandwordremember.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_test_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@mipmap/back"
        app:subtitle="@string/word_test"
        app:title="@string/toolbar_title"
        app:subtitleTextColor="@android:color/white"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/activity_test_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_test_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/submit"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:visibility="invisible"/>
</LinearLayout>
